fix   z-index: 1

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,7 @@ body {
   border-radius: 20px; /* Borda arredondada */
   text-align: center;
   font-size: 1.2rem;
+  z-index: 2;
 }
 
 .quote {
